Fix z-index for mobile nav

--- a/practice-two/src/styles/components/header.css
+++ b/practice-two/src/styles/components/header.css
@@ -75,6 +75,7 @@
     background-color: #CAEAC7;
     transform: translateX(100%);
     animation: transform linear 0.1s;
+    z-index: 1000;
   }
 
   .nav-mobile__close {
